# shellsage

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
shellsage/: __init__.py  agent.py  chat.py  config.py  context.py  executor.py  history.py  main.py  safety.py  sessions.py  setup_wizard.py
shellsage/providers/: __init__.py  base.py  claude.py  ollama.py
tests/: test_agent.py  test_chat.py  test_config_full.py  test_execution_mode.py  test_executor.py  test_history.py  test_providers.py  test_safety.py
